new ns request